# rust-grpc-web-learn

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
proto/: infer.proto
pyts/: infer.py  infer_client.py  infer_pb2.py  infer_pb2_grpc.py  model.py  process_server.py  request
src/: infer.rs
